[workspace]
resolver = "2"
members = [
    "crates/cfn-ast",
    "crates/cfn-schema",
    "crates/cfn-lint",
    "crates/cfn-lint-py",
]

[workspace.dependencies]
dirs = "6"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
