[package]
name = "cfn-ast"
version = "0.1.0"
edition = "2021"
license = "MIT-0"

[dependencies]
cfn-schema = { path = "../cfn-schema", version = "0.1.0" }
arraydeque = "0.5"
indexmap = { workspace = true }
json-spanned-value = "0.2"
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
fetch = ["cfn-schema/fetch"]
bundled = ["cfn-schema/bundled"]

[lints]
workspace = true
