[package]
name = "cfn-lint-py"
version = "0.1.0"
edition = "2021"
license = "MIT-0"
description = "Python bindings for cfn-lint Rust engine"

[lib]
name = "cfn_lint_rs"
crate-type = ["cdylib"]

[dependencies]
cfn-ast = { path = "../cfn-ast" }
cfn-lint = { path = "../cfn-lint" }
cfn-schema = { path = "../cfn-schema" }
pyo3 = { version = "0.29", features = ["extension-module"] }
serde_json = { workspace = true }
