[package]
name = "cfn-lint-py"
version = "0.1.0"
edition = "2021"
license = "MIT-0"
description = "Python bindings for cfn-lint Rust engine"

[lib]
name = "_cfn_lint_rs"
crate-type = ["cdylib"]

[dependencies]
cfn-ast = { path = "../cfn-ast", version = "0.1.0" }
cfn-lint = { path = "../cfn-lint", version = "0.1.0" }
cfn-schema = { path = "../cfn-schema", version = "0.1.0" }
pyo3 = { version = "0.29", features = ["extension-module"] }
serde_json = { workspace = true }

[lints]
workspace = true
