[package]
name = "cfn-lint"
version = "0.1.0"
edition = "2021"
license = "MIT-0"

[features]
default = ["fetch", "bundled"]
fetch = ["cfn-schema/fetch", "ureq", "zip"]
bundled = ["cfn-schema/bundled"]

[dependencies]
cfn-ast = { path = "../cfn-ast" }
cfn-schema = { path = "../cfn-schema" }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
indexmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
glob = "0.3"
regex = "1"
clap = { version = "4", features = ["derive"] }
fancy-regex = "0.17.0"
inventory = "0.3"
ureq = { version = "3", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
walkdir = "2"

[[bench]]
name = "validate"
harness = false
